Fix object selector does not support a domain key in service call

--- a/custom_components/sunseeker/services.yaml
+++ b/custom_components/sunseeker/services.yaml
@@ -17,8 +17,7 @@ start_mowing:
       required: true
       example: ["Front yard", "Back yard"]
       selector:
-        object:
-          domain: select
+        object: {}
 
 set_schedule:
   name: Set schedule
